# opaleye-trans

./: .gitignore  LICENSE  README.md  opaleye-trans.cabal  stack.yaml
examples/v1/: RoseTree.hs  rosetree.sql
examples/v2/: RoseTree.hs  rosetree.sql
src/Opaleye/: Trans.hs
src/Opaleye/Trans/: Exception.hs
