name:                opaleye-trans
version:             0.1.0
synopsis:            A monad transformer for Opaleye
homepage:            https://github.com/tomjaguarpaw/haskell-opaleye
license:             BSD3
license-file:        LICENSE
author:              Matthew Wraith
maintainer:          wraithm@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Opaleye.Trans
  -- other-modules:       
  build-depends:       
    base >=4.8 && <4.9, 
    mtl >=2.2 && <2.3,
    transformers-base,
    monad-control,
    opaleye,
    postgresql-simple,
    product-profunctors
  hs-source-dirs:      src
  default-language:    Haskell2010
